--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -37,7 +37,8 @@ background-image: linear-gradient(to top, #EDEDED 0%, #EAEAEA 8%, #2F2F2F 100%, 
 
 .generic-container {
   position:fixed;
-  width:85%;
+  width:95%;
+  height:auto;
   margin-left: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
